--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.3",
     "nodemon": "^2.0.22"
+  },
+  "engines": {
+    "node": ">=14 <15"
   }
 }
